feat: add user auth token, user creation and upsert user avatar
